; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_spa.c_spa_change_guid.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_spa.c_spa_change_guid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32, i32 }

@spa_namespace_lock = common dso_local global i32 0, align 4
@spa_change_guid_check = common dso_local global i32 0, align 4
@spa_change_guid_sync = common dso_local global i32 0, align 4
@ZFS_SPACE_CHECK_RESERVED = common dso_local global i32 0, align 4
@B_FALSE = common dso_local global i32 0, align 4
@B_TRUE = common dso_local global i32 0, align 4
@ESC_ZFS_POOL_REGUID = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @spa_change_guid(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %5 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %6 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %5, i32 0, i32 0
  %7 = call i32 @mutex_enter(i32* %6)
  %8 = call i32 @mutex_enter(i32* @spa_namespace_lock)
  %9 = call i32 @spa_generate_guid(i32* null)
  store i32 %9, i32* %4, align 4
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* @spa_change_guid_check, align 4
  %14 = load i32, i32* @spa_change_guid_sync, align 4
  %15 = load i32, i32* @ZFS_SPACE_CHECK_RESERVED, align 4
  %16 = call i32 @dsl_sync_task(i32 %12, i32 %13, i32 %14, i32* %4, i32 5, i32 %15)
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp eq i32 %17, 0
  br i1 %18, label %19, label %27

19:                                               ; preds = %1
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %21 = load i32, i32* @B_FALSE, align 4
  %22 = load i32, i32* @B_TRUE, align 4
  %23 = call i32 @spa_write_cachefile(%struct.TYPE_5__* %20, i32 %21, i32 %22)
  %24 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %25 = load i32, i32* @ESC_ZFS_POOL_REGUID, align 4
  %26 = call i32 @spa_event_notify(%struct.TYPE_5__* %24, i32* null, i32* null, i32 %25)
  br label %27

27:                                               ; preds = %19, %1
  %28 = call i32 @mutex_exit(i32* @spa_namespace_lock)
  %29 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %29, i32 0, i32 0
  %31 = call i32 @mutex_exit(i32* %30)
  %32 = load i32, i32* %3, align 4
  ret i32 %32
}

declare dso_local i32 @mutex_enter(i32*) #1

declare dso_local i32 @spa_generate_guid(i32*) #1

declare dso_local i32 @dsl_sync_task(i32, i32, i32, i32*, i32, i32) #1

declare dso_local i32 @spa_write_cachefile(%struct.TYPE_5__*, i32, i32) #1

declare dso_local i32 @spa_event_notify(%struct.TYPE_5__*, i32*, i32*, i32) #1

declare dso_local i32 @mutex_exit(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
